# pre-commit-snippets

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-snippets-config.example.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  main.py  mkdocs.yml  pre-commit-snippet-config.example.yaml  pyproject.toml  release-please-config.json  renovate.json  versions.json
.github/: CODEOWNERS
.github/workflows/: ci.yaml  docs.yaml  publish-beta.yaml  publish-testpypi.yaml  release-please.yaml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api/: index.html
1.0.1/changelog/: index.html
1.0.1/contributing/: index.html
1.0.1/javascripts/: extra.js
1.0.1/stylesheets/: extra.css
1.0.1/tags/: index.html
1.0.4/: 404.html  index.html  sitemap.xml
1.0.4/api/: index.html
1.0.4/changelog/: index.html
1.0.4/contributing/: index.html
1.0.4/overrides/: main.html
1.0.4/search/: search_index.json
1.0.4/tags/: index.html
1.0.5/: 404.html  index.html  objects.inv  sitemap.xml
1.0.5/api/: index.html
1.0.5/changelog/: index.html
1.0.5/contributing/: index.html
1.0.5/search/: search_index.json
1.0.5/tags/: index.html
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/api/: index.html
2.0.0/changelog/: index.html
2.0.0/contributing/: index.html
2.0.0/stylesheets/: extra.css
2.0.1/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  sitemap.xml
docs/: changelog.md  contributing.md  index.md  tags.md
pre_commit_snippet/: __init__.py  cache.py  cli.py  config.py  snippet.py
tests/: __init__.py  test_main.py
(+96 files in other folders)
