[project]
name = "pre-commit-snippet"
version = "0.1.0"
description = "Pre-commit hook that syncs markdown snippets from a central repository"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
pre-commit-snippet = "pre_commit_snippet.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
docs = [
    "mkdocs-material[imaging]>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-git-committers-plugin-2>=2.2",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-macros-plugin>=1.0",
    "mkdocs-redirects>=1.2",
    "mike>=2.0",
    "pillow>=10.0",
    "cairosvg>=2.7",
]
